gac_sb/objects/AppATtimeSheet__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>ActionFaite__c</fullName>
        <label>Action faite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Externalisation à la DAT</fullName>
                </value>
                <value>
                    <fullName>Assist. rédact. de la DAT/MP</fullName>
                </value>
                <value>
                    <fullName>Assist. rédact. courrier de réserve</fullName>
                </value>
                <value>
                    <fullName>Assist. rédact. rapport geste et posture</fullName>
                </value>
                <value>
                    <fullName>Assist. réponse lettre d&apos;observation</fullName>
                </value>
                <value>
                    <fullName>Assist. demande de dossier</fullName>
                </value>
                <value>
                    <fullName>autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DossierSalarie__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dossier Salarié</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AppATdossiersSalaries__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Conseil</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AppATdossiersSalaries__c</referenceTo>
        <relationshipName>TempsPasse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duree__c</fullName>
        <label>Durée (en minute)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <label>Mission</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Mission__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>TAT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Mission__c</referenceTo>
        <relationshipName>TempsPasse</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Sheet AT</label>
    <nameField>
        <displayFormat>TP N°{0000}</displayFormat>
        <label>Numéro Temps passé</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheets AT</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>